--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,107 @@
+affine==2.3.1
 asgiref==3.4.1
+asttokens==2.1.0
+attrs==22.1.0
 autopep8==1.5.7
+backcall==0.2.0
+bandit==1.7.4
+bokeh==3.0.3
+branca==0.6.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
+click-plugins==1.1.1
+cligj==0.7.2
+colorama==0.4.6
+commonmark==0.9.1
+contextily==1.2.0
+contourpy==1.0.6
+cycler==0.11.0
+debugpy==1.6.3
+decorator==5.1.1
+defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==3.2.6
+django-cors-headers==3.13.0
+django-environ==0.9.0
+django-widget-tweaks==1.4.12
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+entrypoints==0.4
+et-xmlfile==1.1.0
+executing==1.2.0
+Fiona==1.8.22
+folium==0.13.0
+fonttools==4.38.0
+geographiclib==2.0
+geojson==2.5.0
+geopandas==0.12.1
+geopy==2.3.0
+gitdb==4.0.9
+GitPython==3.1.29
+gmaps==0.9.0
 gunicorn==20.1.0
+idna==3.4
+ipykernel==6.17.1
+ipython==8.6.0
+ipywidgets==8.0.3
+jedi==0.18.1
+Jinja2==3.1.2
+joblib==1.2.0
+jupyter_client==7.4.6
+jupyter_core==5.0.0
+jupyterlab-widgets==3.0.4
+kiwisolver==1.4.4
+MarkupSafe==2.1.1
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
+mercantile==1.2.1
+munch==2.5.0
+nest-asyncio==1.5.6
+numpy==1.23.4
+openpyxl==3.0.10
+packaging==21.3
+pandas==1.5.1
+parso==0.8.3
+pbr==5.11.0
+pickleshare==0.7.5
+Pillow==9.3.0
+platformdirs==2.5.4
+prompt-toolkit==3.0.32
+psutil==5.9.4
+psycopg2==2.9.5
+pure-eval==0.2.2
 pycodestyle==2.7.0
+Pygments==2.13.0
+PyJWT==2.6.0
+pyparsing==3.0.9
+pyproj==3.4.0
+python-ags4==0.4.1
+python-dateutil==2.8.2
 python-decouple==3.4
 pytz==2021.1
+pywin32==305
+PyYAML==6.0
+pyzmq==24.0.1
+rasterio==1.3.3
+requests==2.28.1
+rich==12.6.0
+scipy==1.9.3
+Shapely==1.8.5.post1
+six==1.16.0
+smmap==5.0.0
+snuggs==1.4.7
 sqlparse==0.4.2
+stack-data==0.6.1
+stevedore==4.1.0
+striplog==0.9.2
 toml==0.10.2
+tornado==6.2
+traitlets==5.5.0
+tzdata==2022.6
 Unipath==1.1
+urllib3==1.26.12
+wcwidth==0.2.5
 whitenoise==5.3.0
+widgetsnbextension==4.0.4
+xyzservices==2022.9.0
