frontend design change

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     },
     "bugs": {
         "url": "https://github.com/creativetimofficial/material-dashboard-django/issues",
-        "email": "support@appseed.us"
+        "email": "support@Geodata.us"
     },
-    "author": "Creative-Tim / AppSeed.us",
+    "author": "Creative-Tim / Geodata.us",
     "engines": {
         "node": ">=10.0.0"
     },
