--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,9 @@ decorator==5.1.1
 defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==3.2.6
+django-ajax-datatable==4.4.5
 django-cors-headers==3.13.0
+django-datatables-view==1.20.0
 django-environ==0.9.0
 django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
@@ -69,6 +71,7 @@ Pillow==9.3.0
 platformdirs==2.5.4
 prompt-toolkit==3.0.32
 psutil==5.9.4
+psycopg2==2.9.5
 pure-eval==0.2.2
 pycodestyle==2.7.0
 Pygments==2.13.0
@@ -79,6 +82,7 @@ python-ags4==0.4.1
 python-dateutil==2.8.2
 python-decouple==3.4
 pytz==2021.1
+pywin32==305
 PyYAML==6.0
 pyzmq==24.0.1
 rasterio==1.3.3
